--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
 PORT = 8000
 
-MONGODB_URL = mongodb+srv://khanh79:Quockhanh1@cluster0.5cpvpm1.mongodb.net/staff-management?retryWrites=true&w=majority
+URL_CLIENT = http://localhost:3000
+
+MONGODB_URL = mongodb://localhost:27017/project_final
 
 JWT_ACCESS_KEY = ashdjashdkawkk@Faisduiwk1391!dskajkaksmwSJDEJ
 
@@ -9,3 +11,12 @@ EXPIRED_ACCESS_KEY = 60m
 JWT_REFRESH_KEY = ashdjash$@dk*&2awkk@Faisdsawk1391!dskaksmwSJD
 
 EXPIRED_REFRESH_KEY = 1d
+
+GOOGLE_CLIENT_ID = 792957105111-tqttcjatuvkso7gtae93g7stsabkelf4.apps.googleusercontent.com
+
+GOOGLE_CLIENT_SECRET = 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
+
+
+FACEBOOK_APP_ID = 226154480075365
+
+FACEBOOK_APP_SECRET = 47d12131914e309461da7befc6796332
